--- a/lab/nn.ipynb
+++ b/lab/nn.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9.91M/9.91M [00:00<00:00, 23.5MB/s]\n",
-      "100%|██████████| 28.9k/28.9k [00:00<00:00, 5.24MB/s]\n",
-      "100%|██████████| 1.65M/1.65M [00:00<00:00, 17.6MB/s]\n",
-      "100%|██████████| 4.54k/4.54k [00:00<00:00, 17.0MB/s]\n"
+      "100.0%\n",
+      "100.0%\n",
+      "100.0%\n",
+      "100.0%\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,25 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col_0    0     1     2    3    4    5    6     7    8    9\n",
-      "row_0                                                     \n",
-      "0      970     0     2    0    1    3    2     2    6    2\n",
-      "1        0  1123     0    0    0    1    1     2    1    3\n",
-      "2        2     3  1016    7    3    0    0     8    3    1\n",
-      "3        1     1     1  989    0   14    1     3   12    6\n",
-      "4        1     0     1    0  958    1    3     0    4    7\n",
-      "5        0     0     0    4    1  864    2     2    5    2\n",
-      "6        3     2     2    0    5    6  949     0    3    3\n",
-      "7        1     2     6    6    6    1    0  1008    6    7\n",
-      "8        2     4     4    2    2    2    0     0  932    3\n",
-      "9        0     0     0    2    6    0    0     3    2  975\n",
+      "col_0    0     1     2    3    4    5    6    7    8    9\n",
+      "row_0                                                    \n",
+      "0      967     0     1    0    1    2    2    3    4    2\n",
+      "1        0  1126     0    0    0    0    3    0    0    3\n",
+      "2        1     2  1018    5    5    0    2   16    7    0\n",
+      "3        3     2     6  991    0   13    2    2    9    6\n",
+      "4        0     0     1    0  961    2    1    2    2    6\n",
+      "5        1     0     0    5    0  865    2    1    3    5\n",
+      "6        5     1     1    0    3    2  946    0    0    1\n",
+      "7        1     1     2    2    2    1    0  997    3    3\n",
+      "8        2     3     3    2    2    3    0    2  942    5\n",
+      "9        0     0     0    5    8    4    0    5    4  978\n",
       "Accuracy: 97 %\n"
      ]
     }
@@ -144,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
